--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vast-client",
   "author": "Olivier Poitrey <rs@dailymotion.com>",
+  "contributors": [
+    "Elia Maino <eliamaino@gmail.com>"
+  ],
   "version": "2.0.0-alpha.8",
   "description": "Javascript VAST Client",
   "keywords": [
@@ -15,29 +18,32 @@
     "type": "git",
     "url": "https://github.com/dailymotion/vast-client-js"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/dailymotion/vast-client-js/raw/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "engines": {
-    "node": ">=0.10.26"
+    "node": "8.9.4"
   },
   "main": "dist/index.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register --reporter spec test/*.coffee",
-    "bundle": "browserify -s DMVAST -c 'coffee -scb' --extension=.coffee src/index.coffee -o vast-client.js",
+    "test": "mocha --compilers coffee:coffeescript/register --reporter spec test/*.coffee",
+    "dev": "webpack --watch",
+    "build": "webpack --config=webpack.min.config.js",
     "postinstall": "coffee --compile --output dist/ src/"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.1",
+    "coffee-loader": "^0.9.0",
     "mocha": "^3.4.2",
     "should": "^11.2.1",
-    "sinon": "^2.3.6"
+    "sinon": "^2.3.6",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
   },
   "dependencies": {
-    "coffee-script": "~1.12.6",
     "browserify": "~14.4.0",
+    "coffeescript": "^2.2.2",
+    "path": "^0.12.7",
     "xmldom": "~0.1.27"
   }
 }
