--- a/package.json
+++ b/package.json
@@ -22,32 +22,35 @@
   "engines": {
     "node": ">=8.9.4"
   },
-  "main": "dist/vast-client-node.min.js",
-  "module": "src/index.js",
-  "browser": {
-    "dist/vast-client.min.js": "dist/vast-client.min.js"
-  },
+  "main": "dist/vast-client.cjs.js",
+  "module": "dist/vast-client.esm.js",
+  "browser": "dist/vast-client.umd.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --reporter spec test/*.js",
-    "build": "webpack && webpack --env=dev && webpack --env=node && webpack --env=node-dev",
+    "build": "rollup -c",
     "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.3",
-    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "husky": "^0.14.3",
     "mocha": "^5.1.1",
     "path": "^0.12.7",
     "prettier": "^1.11.1",
     "pretty-quick": "^1.4.1",
+    "rollup": "^0.58.2",
+    "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^3.0.0",
     "should": "^11.2.1",
-    "sinon": "^2.3.6",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0"
+    "sinon": "^2.3.6"
   },
   "dependencies": {
-    "xmldom": "~0.1.27"
+    "xmldom": "^0.1.27"
   }
 }
