--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "contributors": [
     "Elia Maino <eliamaino@gmail.com>"
   ],
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0",
   "description": "Javascript VAST Client",
   "keywords": [
     "vast",
