--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "engines": {
     "node": ">=8.9.4"
   },
-  "main": "src/index.js",
+  "main" : "vast-client.js",
+  "module" : "src/index.js",
+  "browser" : "vast-client.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --reporter spec test/*.js",
     "build": "webpack",
