[tools] Make node engine version more flexible

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "8.9.4"
+    "node": ">=8.9.4"
   },
   "main": "src/index.js",
   "scripts": {
