--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "should": "^11.2.1",
     "sinon": "^2.3.6",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.3",
+    "webpack-conditional-loader": "^1.0.12"
   },
   "dependencies": {
     "xmldom": "~0.1.27"
