--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
     "pretty-quick": "^1.4.1",
     "should": "^11.2.1",
     "sinon": "^2.3.6",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-conditional-loader": "^1.0.12"
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "xmldom": "~0.1.27"
