--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "engines": {
     "node": ">=8.9.4"
   },
-  "main": "dist/vast-client.cjs.js",
-  "module": "dist/vast-client.esm.js",
-  "browser": "dist/vast-client.umd.js",
+  "main": "dist/vast-client-node.min.js",
+  "module": "src/index.js",
+  "browser": {
+    "dist/vast-client.min.js": "dist/vast-client.min.js"
+  },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --reporter spec test/*.js",
     "build": "rollup -c",
