--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": ">=8.9.4"
   },
   "main": "dist/vast-client-node.min.js",
-  "module": "src/index.js",
+  "module": "dist/vast-client-module.min.js",
   "browser": {
     "dist/vast-client.min.js": "dist/vast-client.min.js"
   },
