--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
+    "eslint": "^5.12.1",
     "husky": "^0.14.3",
     "mocha": "^5.1.1",
     "path": "^0.12.7",
