--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^5.12.1",
+    "eslint-plugin-import": "^2.15.0",
     "husky": "^0.14.3",
     "mocha": "^5.1.1",
     "path": "^0.12.7",
