[docs] Change description of the package

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "Elia Maino <eliamaino@gmail.com>"
   ],
   "version": "2.2.1",
-  "description": "Javascript VAST Client",
+  "description": "JavaScript VAST Client",
   "keywords": [
     "vast",
     "ad",
