--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-    "presets": [
-      [
-        "es2015"
-      ]
-    ]
+  "presets": ["@babel/preset-env"],
+  "exclude": ["node_modules/**"]
 }
