--- a/package.json
+++ b/package.json
@@ -31,26 +31,26 @@
     "build": "rollup -c",
     "lint": "eslint .",
     "precommit": "eslint . --max-warnings 0 && pretty-quick --staged",
-    "test": "mocha --compilers js:babel-core/register --reporter spec test/*.js"
+    "test": "mocha --compilers js:@babel/register --reporter spec test/*.js"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "eslint": "^5.13.0",
     "eslint-plugin-import": "^2.15.0",
     "husky": "^0.14.3",
+    "jest": "^24.1.0",
     "mocha": "^5.1.1",
     "path": "^0.12.7",
     "prettier": "^1.11.1",
     "pretty-quick": "^1.4.1",
-    "rollup": "^0.58.2",
+    "rollup": "^1.1.2",
     "rollup-plugin-alias": "^1.4.0",
-    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-uglify": "^6.0.2",
     "should": "^11.2.1",
     "sinon": "^2.3.6"
   },
