--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "contributors": [
     "Elia Maino <eliamaino@gmail.com>"
   ],
-  "version": "2.5.0",
+  "version": "3.0.0-alpha.0",
   "description": "JavaScript VAST Client",
   "keywords": [
     "vast",
