[tracker][test] support Linear ads and Player Operation  events for VAST 4.1 moved mocha configs to separate file to be able run any isolated test from IDE

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "rollup -c",
     "lint": "eslint .",
     "precommit": "eslint . --max-warnings 0 && pretty-quick --staged",
-    "test": "mocha --compilers js:@babel/register --reporter spec test/*.js && jest",
+    "test": "mocha && jest",
     "jest": "jest"
   },
   "devDependencies": {
