Use spread for macros instead of JSON.stringify + parse
Eslint complained about `Unexpected token ...` so I've upgraded eslint
and switched to babel-eslint parser

--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.15.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
     "husky": "^0.14.3",
     "jest": "^24.1.0",
     "mocha": "^5.1.1",
