--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "path": "^0.12.7",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
-    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup": "^1.32.1",
     "should": "^13.2.3",
     "sinon": "^2.4.1"
