--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=10.12.0"
+    "node": ">=12.22.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -35,31 +35,31 @@
     "jest": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.11.5",
-    "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-babel": "^5.2.1",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.16.9",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "canvas": "^2.8.0",
-    "eslint": "^7.9.0",
-    "eslint-plugin-import": "^2.22.0",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "mocha": "^8.1.3",
+    "canvas": "^2.9.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.4",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "mocha": "^8.4.0",
     "path": "^0.12.7",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2",
-    "rollup": "^2.28.1",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
+    "rollup": "^2.66.1",
     "rollup-plugin-terser": "^7.0.2",
     "should": "^13.2.3",
     "sinon": "^2.4.1"
   },
   "dependencies": {
-    "xmldom": "github:xmldom/xmldom#0.7.0"
+    "@xmldom/xmldom": "^0.7.5"
   }
 }
